publishing to gh-pages (publish.sh)

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 	<meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="John Doe&#39;s Personal blog about everything" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://localhost:1313/404.html" />
+<meta property="og:url" content="https://rednafi.github.io/red-blogs/404.html" />
 
 
 	<meta name="twitter:card" content="summary"/>
@@ -20,9 +20,9 @@
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
 	<link rel="dns-prefetch" href="//fonts.gstatic.com">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700">
-	<link rel="stylesheet" href="/css/style.css">
-	<link rel="stylesheet" href="/css/custom.css">
-	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="stylesheet" href="/red-blogs/css/style.css">
+	<link rel="stylesheet" href="/red-blogs/css/custom.css">
+	<link rel="shortcut icon" href="/red-blogs/favicon.ico">
 		
 </head>
 <body class="body">
@@ -30,7 +30,7 @@
 		<header class="header">
 	<div class="container">
 		<div class="logo">
-			<a class="logo__link" href="/" title="Redowan&#39;s Musings" rel="home">
+			<a class="logo__link" href="/red-blogs" title="Redowan&#39;s Musings" rel="home">
 				<div class="logo__title">Redowan&#39;s Musings</div>
 				<div class="logo__tagline">Just another site</div>
 			</a>
@@ -42,7 +42,7 @@
 	</button>
 	<ul class="menu__list">
 		<li class="menu__item">
-			<a class="menu__link" href="/about/">
+			<a class="menu__link" href="/red-blogs/about/">
 				
 				<span class="menu__text">About Hugo</span>
 				
@@ -59,7 +59,7 @@
 <main class="main" role="main">
 	<div class="warning">
 		<h1 class="warning__headline">404. Page not found</h1>
-		<p class="warning__text">The page you were looking for appears to have been moved, deleted or does not exist. Please, use search or go to <a href="/">main page</a>.</p>
+		<p class="warning__text">The page you were looking for appears to have been moved, deleted or does not exist. Please, use search or go to <a href="/red-blogs">main page</a>.</p>
 	</div>
 </main>
 
@@ -71,18 +71,18 @@
 			<input class="widget-search__field" type="search" placeholder="SEARCH..." value="" name="q" aria-label="SEARCH...">
 		</label>
 		<input class="widget-search__submit" type="submit" value="Search">
-		<input type="hidden" name="sitesearch" value="http://localhost:1313" />
+		<input type="hidden" name="sitesearch" value="https://rednafi.github.io/red-blogs" />
 	</form>
 </div>
 <div class="widget-recent widget">
 	<h4 class="widget__title">Recent Posts</h4>
 	<div class="widget__content">
 		<ul class="widget__list">
-			<li class="widget__item"><a class="widget__link" href="/post/zsh_installation/">A Minimalistic Approach to Zsh</a></li>
-			<li class="widget__item"><a class="widget__link" href="/post/brisk_bash/">Dipping Toes into Bash Scripting</a></li>
-			<li class="widget__item"><a class="widget__link" href="/post/mysql_linux/">Brisk Guide to Set Up MySQL on Linux</a></li>
-			<li class="widget__item"><a class="widget__link" href="/post/tensorflow1.12_install/">Brisk Guide to Install Tensorflow GPU on Linux (Ubuntu 18.04/18.10)</a></li>
-			<li class="widget__item"><a class="widget__link" href="/post/electric_nostalgia/">Electric Nostalgia</a></li>
+			<li class="widget__item"><a class="widget__link" href="/red-blogs/post/zsh_installation/">A Minimalistic Approach to Zsh</a></li>
+			<li class="widget__item"><a class="widget__link" href="/red-blogs/post/brisk_bash/">Dipping Toes into Bash Scripting</a></li>
+			<li class="widget__item"><a class="widget__link" href="/red-blogs/post/mysql_linux/">Brisk Guide to Set Up MySQL on Linux</a></li>
+			<li class="widget__item"><a class="widget__link" href="/red-blogs/post/tensorflow1.12_install/">Brisk Guide to Install Tensorflow GPU on Linux (Ubuntu 18.04/18.10)</a></li>
+			<li class="widget__item"><a class="widget__link" href="/red-blogs/post/electric_nostalgia/">Electric Nostalgia</a></li>
 		</ul>
 	</div>
 </div>
@@ -127,6 +127,6 @@
 	</div>
 </footer>
 	</div>
-<script async defer src="/js/menu.js"></script>
-<script src="/js/custom.js"></script></body>
+<script async defer src="/red-blogs/js/menu.js"></script>
+<script src="/red-blogs/js/custom.js"></script></body>
 </html>
